@@ -1,7 +1,8 @@
 Version 1.3.1
  Fixed:
   - Renamed 'New' menu option for icon and prefix view to 'New icon' and 'New
-  folder' respectively to avoid confusion;
+  folder' respectively to avoid confusion [BUG-69];
+  - Allow to execute and create icons for *.bat and *.msi files [BUG-69];
 
 Version 1.3
  Added:
